name:                fm
version:             0.0.1
cabal-version:       2.4
license:             MIT
license-file:        LICENSE
copyright:           Public Domain
author:              David Heras
maintainer:          dheras@protonmail.com
source-repository head
  type:              git
  location:          git://github.com/dtheras/fm.git
homepage:            https://github.com/dtheras/fm
bugreports:          https://github.com/dtgeras/fm/issues
stability:           alpha
category:            System
synopsis:            a terminal-based file manager
description:         fm is a port of the "ranger" file manager written in Haskell.
ghc-options:         -Wall -XNoArrows
executable: fm
  main-is:           fm.hs
  build-depends:     base ^>=4.11.1.0
  hs-source-dirs:    src
  default-language:  Haskell2010
  other-modules:     Paths_fm
